--- a/r/analyses multivariées.Rmd
+++ b/r/analyses multivariées.Rmd
@@ -17,17 +17,20 @@ opts_chunk$set(echo = FALSE, eval = TRUE, warning = FALSE, message = FALSE, fig.
                out.width = '100%', out.height = '100%')
 ```
 
-```{r test-main, child = 'child_source.Rmd'}
+```{r}
+source("data_theme_fct.R")
 ```
+
 
 ```{r lib}
 library(sf)
 library(plotly)
+library(viridis)
 ```
 
 # Localisation des accidents en 2018
 
-```{r}
+```{r, results = 'hide'}
 ### Shapefiles via data.gouv.fr
 # https://www.data.gouv.fr/fr/datasets/contours-des-regions-francaises-sur-openstreetmap/
 # https://www.data.gouv.fr/fr/datasets/contours-des-departements-francais-issus-d-openstreetmap/
@@ -79,19 +82,7 @@ map_data <- merge(
 # Ajout du taux d'accident pour 1000 habitant par département
 map_data <- map_data %>% 
   mutate(tx = round(n/Population*1000,2),
-         text = paste0(Département, "\n", "Nombre d'accidents pour 1000 habitant :", tx)#,
-         # bin = case_when(
-         #   tx < 0.45 ~ "0.37 - 0.45",
-         #   tx >= 0.45 & tx < 0.48 ~ "0.45 - 0.48",
-         #   tx >= 0.48 & tx < 0.54 ~ "0.48 - 0.54",
-         #   tx >= 0.54 & tx < 0.63 ~ "0.54 - 0.63",
-         #   tx >= 0.63 & tx < 0.67 ~ "0.63 - 0.67",
-         #   tx >= 0.67 & tx < 0.72 ~ "0.67 - 0.72",
-         #   tx >= 0.72 & tx < 0.77 ~ "0.72 - 0.77",
-         #   tx >= 0.77 & tx < 0.91 ~ "0.77 - 0.91",
-         #   tx >= 0.91 & tx < 1.13 ~ "0.91 - 1.13",
-         #   tx >= 1.13 ~ "1.13 - 2.55"
-         # )
+         text = paste0(Département, "\n", "Nombre d'accidents pour 1000 habitant :", tx)
          )
   
 # map
@@ -106,11 +97,13 @@ map <- ggplot(data = map_data) +
     axis.text = element_blank(),
     axis.ticks = element_blank(),
     panel.background = element_blank(),
-    plot.margin = margin(0,0,0,0)
+    plot.margin = margin(0,0,0,0),
+    panel.grid.major = element_blank(), 
+    panel.grid.minor = element_blank(),
+    axis.line = element_blank()
   )
 
 ggplotly(map, tooltip = "text") %>% 
-  # layout(legend = list(orientation = "h", x = 0, y = 0)) %>% 
   config(displayModeBar = F) 
 
 # A tester avec leaflet
@@ -174,7 +167,10 @@ vehic_heatmap <- ggplot(data = heatmap %>% filter(grav == "Tué"),
     axis.title = element_blank(),
     axis.text = element_blank(),
     axis.ticks = element_blank(),
-    panel.background = element_blank()
+    panel.background = element_blank(),
+    panel.grid.major = element_blank(), 
+    panel.grid.minor = element_blank(),
+    axis.line = element_blank()
   ) +
   scale_fill_gradient(low = "#da3349", high = "#660000") +
   labs(
@@ -194,7 +190,10 @@ vehic_heatmap <- ggplot(data = heatmap %>% filter(grav == "Blessé hospitalisé"
     axis.title = element_blank(),
     axis.text = element_blank(),
     axis.ticks = element_blank(),
-    panel.background = element_blank()
+    panel.background = element_blank(),
+    panel.grid.major = element_blank(), 
+    panel.grid.minor = element_blank(),
+    axis.line = element_blank()
   ) +
   scale_fill_gradient(low = "#da3349", high = "#660000") +
   labs(
@@ -214,7 +213,10 @@ vehic_heatmap <- ggplot(data = heatmap %>% filter(grav == "Blessé léger"),
     axis.title = element_blank(),
     axis.text = element_blank(),
     axis.ticks = element_blank(),
-    panel.background = element_blank()
+    panel.background = element_blank(),
+    panel.grid.major = element_blank(), 
+    panel.grid.minor = element_blank(),
+    axis.line = element_blank()
   ) +
   scale_fill_gradient(low = "#da3349", high = "#660000") +
   labs(
@@ -234,7 +236,10 @@ vehic_heatmap <- ggplot(data = heatmap %>% filter(grav == "Indemne"),
     axis.title = element_blank(),
     axis.text = element_blank(),
     axis.ticks = element_blank(),
-    panel.background = element_blank()
+    panel.background = element_blank(),
+    panel.grid.major = element_blank(), 
+    panel.grid.minor = element_blank(),
+    axis.line = element_blank()
   ) +
   scale_fill_gradient(low = "#da3349", high = "#660000") +
   labs(
@@ -251,35 +256,11 @@ ggplotly(vehic_heatmap, tooltip = "text") %>% config(displayModeBar = F)
 
 ## Pourcentage d'accidents impliquants un autre véhicule
 
-# Analyse des usagers
+## Comparaison du % de gravité de l'accident selon la catégorie d'usager
 
-taux mortalité par age x catégorie usagers
+## Impact de la luminosité sur le nombre d'accident
 
-
-## Conducteurs
-âge
-
-## Piétons
-âge
-
-## Nombre de personnes par voiture + moto etc en moyenne
-
-# Analyse des sources de danger
-
-## Quels sont les types de voies les plus dangereuses ?
-
-## Quel est le type d'intersection le plus dangereux ?
-
-## Nombre de tués ou blessée hospitalisés vs nb total d'accident
-
-## Quel est l'impact de l'état de la voie sur le nombre d'accident ?
-
-## Quel est l'impact de l'état de la voie sur le taux de mortalité ?
-
-
-## Quel est l'impact du moment de la journée sur le nombre d'accidents ?
-
-```{r}
+```{r, out.width="100%"}
 # Nombre d'accidents en fonction du moment de la journée
 caract %>% 
   group_by(lum) %>% 
@@ -289,13 +270,163 @@ caract %>%
   coord_flip() +
   labs(
     x = "",
-    y = "Nombre d'accidents"
+    y = "Nombre d'accidents",
+    title = "Distribution des accidents en fonction\n du moment de la luminosité"
+  )
+```
+
+# Analyse des usagers
+
+taux mortalité par age x catégorie usagers
+
+## Age des usagers impliqués dans des accidents en 2018
+
+```{r}
+usag %>% 
+  mutate(age = 2018 - an_nais) %>% 
+  ggplot(aes(x = catu, y = age)) +
+  geom_boxplot() +
+  labs(
+    x = "",
+    y = "Age",
+    title = "Distribution de l'âge des usagers en 2018"
+  )
+
+```
+
+## Scatterplot taux de mortalité vs âge
+
+```{r}
+usag %>% 
+  mutate(age = 2018 - an_nais) %>% 
+  group_by(age) %>% 
+  mutate(nb_acc_age = n()) %>% 
+  group_by(age, grav, nb_acc_age) %>% 
+  summarise(nb_acc = n()) %>%
+  mutate(perc_grav = round(nb_acc/nb_acc_age*100,2)) %>% 
+  filter(grav == "Tué") %>% 
+  ggplot(mapping = aes(x = age, y = perc_grav)) +
+  geom_point(aes(size = nb_acc_age)) +
+  labs(
+    x = "Âge",
+    y = "Taux de mortalité",
+    size = "Nombre d'accidents\n total",
+    title = "Âge vs taux de mortalité"
   )
 ```
 
 
-## Quel est l'impact du moment de la journée sur le taux de mortalité ?
+
+## Boxplots taux mortalité Conducteurs vs piétons vs passager
+
 ```{r}
+usag %>% 
+  group_by(catu) %>% 
+  mutate(nb_acc_cat = n()) %>% 
+  group_by(catu, grav, nb_acc_cat) %>% 
+  summarise(nb_acc = n()) %>%
+  mutate(perc_grav = round(nb_acc/nb_acc_cat*100,2)) %>% 
+  filter(grav == "Tué") %>% 
+  ggplot(mapping = aes(x = catu, y = perc_grav)) +
+  geom_histogram(stat = "identity") +
+  labs(
+    x = "",
+    y = "Taux de mortalité (%)",
+    title = "Taux de mortalité par catégorie d'usager"
+  )
+```
+
+## idem avec aggregation tué et hospitalisé
+```{r}
+usag %>% 
+  group_by(catu) %>% 
+  mutate(nb_acc_cat = n(),
+         grav = if_else(
+           condition = grav %in% c("Tué", "Blessé hospitalisé"),
+           true = "Blessé grave",
+           false = as.character(grav)
+         )) %>%
+  group_by(catu, grav, nb_acc_cat) %>% 
+  summarise(nb_acc = n()) %>%
+  mutate(perc_grav = round(nb_acc/nb_acc_cat*100,2)) %>% 
+  filter(grav == "Blessé grave") %>% 
+  ggplot(mapping = aes(x = catu, y = perc_grav)) +
+  geom_histogram(stat = "identity") +
+  labs(
+    x = "",
+    y = "Taux d'accidents graves (%)",
+    title = "Taux d'accidents graves par catégorie d'usager"
+  )
+```
+
+
+
+```{r}
+usag %>% 
+  mutate(age = 2018 - an_nais,
+         groupe = case_when(
+           age <= 10 ~ "0-10 ans",
+           age > 10 & age <=20 ~ "11-20 ans",
+           age > 20 & age <=30 ~ "21-30 ans",
+           age > 30 & age <=40 ~ "31-40 ans",
+           age > 40 & age <=50 ~ "41-50 ans",
+           age > 50 & age <=60 ~ "51-60 ans",
+           age > 60 & age <=70 ~ "61-70 ans",
+           age > 70 & age <=80 ~ "71-80 ans",
+           age > 80 & age <=90 ~ "81-90 ans",
+           age > 90 ~ "> 90 ans"),
+         groupe = factor(groupe, levels = rev(c("0-10 ans", "11-20 ans", "21-30 ans", "31-40 ans", "41-50 ans", "51-60 ans", "61-70 ans", "71-80 ans", "81-90 ans", "> 90 ans"))
+         )) %>% 
+  group_by(groupe, catu) %>% 
+  summarise(n = n()) %>% 
+  ggplot(aes(x = groupe, y = n, fill = catu)) +
+  geom_histogram(position = "fill", stat = 'identity') +
+  # geom_bar(position = "fill", stat = "identity") +
+  coord_flip() +
+  labs(
+    x = "",
+    y = "",
+    title = "Distribution de l'âge des usagers l'année de l'accident",
+    fill = ""
+  ) +
+  scale_fill_viridis(discrete = TRUE)
+```
+
+## Nombre de personnes par voiture + moto etc en moyenne
+
+
+
+
+
+
+
+# Analyse des sources de danger
+
+## Analyse des types de voies
+Quels sont les types de voies les plus dangereuses ?
+
+Distribution des accidents selon la voie
+boxplot taux mortalité / boxplot gravité
+
+## Quel est le type d'intersection le plus dangereux ?
+
+## Nombre de tués ou blessée hospitalisés vs nb total d'accident
+
+## Quel est l'impact de l'état de la voie sur le nombre d'accident ?
+
+## Quel est l'impact de l'état de la voie sur le taux de mortalité ?
+
+## Distribution des accidents par type de véhicules utilisé 
+
+
+
+
+
+## Quel est l'impact du moment de la journée sur le taux de mortalité ?
+
+Faire aussi les boxplots
+
+```{r, out.width="100%"}
 # Nombre d'accidents graves en fonction du moment de la journée
 day_grav <- merge(
   x = usag,
@@ -320,22 +451,30 @@ day_grav %>%
   geom_bar(position = "fill", stat = "identity") +
   coord_flip() +
   labs(
-    title = "Distribution de la gravité de l'accident en fonction du moment de la journée",
+    title = "Distribution des accidents en fonction\n de la luminosité et de leur gravité",
     subtitle = "Focus sur le blessé le plus grave rattaché à l'accident",
     x = "",
-    y = "Nombre d'accidents"
+    y = "",
+    fill = ""
+  ) +
+  scale_fill_manual(values = c("Tué" = "#660000",
+                                         "Blessé hospitalisé" = "darkblue", 
+                                         "Blessé léger" = "darkgreen", 
+                                         "Indemne" = "lightblue")) +
+  theme(
+    axis.ticks = element_blank(),
+    axis.text.x = element_blank()
   )
-
-# to do : changer les couleurs
 ```
 
-Test de student / comparaison de moyenne
-box plots
 
 # est-ce que le temps est un facteur aggravant ?
 
 ## Quels sont les véhicules les plus dangereux ?
 Les plus impliqués dans des accidents ?
+
+
+# Quels sont les plus grosses sources de danger pour les piétons ?
 
 
 
