--- a/r/analyses multivariées.Rmd
+++ b/r/analyses multivariées.Rmd
@@ -250,34 +250,32 @@ vehic_heatmap <- ggplot(data = heatmap %>% filter(grav == "Indemne"),
 ggplotly(vehic_heatmap, tooltip = "text") %>% config(displayModeBar = F)
 ```
 
-# Analyse des accidents
+# Analyse des usagers
 
 ## Pourcentage d'accidents impliquants des piétons
 
-## Pourcentage d'accidents impliquants un autre véhicule
+```{r}
+pietons <- usag %>% 
+  filter(catu == "Piéton") %>% 
+  distinct(Num_Acc)
 
-## Comparaison du % de gravité de l'accident selon la catégorie d'usager
+agg <- caract %>% 
+  mutate(implication = ifelse(
+    test = Num_Acc %in% pietons$Num_Acc,
+    yes = "Accidents impliquant\n au moins un piéton",
+    no = "Accidents n'impliquant\n pas de piétons"
+      )) %>% 
+  group_by(implication) %>% 
+  summarise(count = n())
 
-## Impact de la luminosité sur le nombre d'accident
-
-```{r, out.width="100%"}
-# Nombre d'accidents en fonction du moment de la journée
-caract %>% 
-  group_by(lum) %>% 
-  summarise(nb_accidents = n()) %>% 
-  ggplot(aes(x = fct_reorder(lum, nb_accidents), y = nb_accidents)) +
-  geom_bar(stat = "identity") +
-  coord_flip() +
-  labs(
-    x = "",
-    y = "Nombre d'accidents",
-    title = "Distribution des accidents en fonction\n du moment de la luminosité"
-  )
+agg %>% 
+  mutate(prop = paste0(round(count / sum(agg$count) *100,0),"%")) %>% 
+  kable() %>% 
+  kable_styling(
+      bootstrap_options = c("striped", "hover", "responsive"), font_size = 12 
+    )
 ```
 
-# Analyse des usagers
-
-taux mortalité par age x catégorie usagers
 
 ## Age des usagers impliqués dans des accidents en 2018
 
@@ -294,9 +292,9 @@ usag %>%
 
 ```
 
-## Scatterplot taux de mortalité vs âge
+## Influence de l'âge sur le taux de décès suite à un accident
 
-```{r}
+```{r, out.width='100%'}
 usag %>% 
   mutate(age = 2018 - an_nais) %>% 
   group_by(age) %>% 
@@ -306,60 +304,15 @@ usag %>%
   mutate(perc_grav = round(nb_acc/nb_acc_age*100,2)) %>% 
   filter(grav == "Tué") %>% 
   ggplot(mapping = aes(x = age, y = perc_grav)) +
-  geom_point(aes(size = nb_acc_age)) +
+  geom_point(aes(size = nb_acc_age), alpha = 0.7) +
   labs(
     x = "Âge",
     y = "Taux de mortalité",
     size = "Nombre d'accidents\n total",
     title = "Âge vs taux de mortalité"
-  )
+  ) +
+  theme(legend.position = "bottom")
 ```
-
-
-
-## Boxplots taux mortalité Conducteurs vs piétons vs passager
-
-```{r}
-usag %>% 
-  group_by(catu) %>% 
-  mutate(nb_acc_cat = n()) %>% 
-  group_by(catu, grav, nb_acc_cat) %>% 
-  summarise(nb_acc = n()) %>%
-  mutate(perc_grav = round(nb_acc/nb_acc_cat*100,2)) %>% 
-  filter(grav == "Tué") %>% 
-  ggplot(mapping = aes(x = catu, y = perc_grav)) +
-  geom_histogram(stat = "identity") +
-  labs(
-    x = "",
-    y = "Taux de mortalité (%)",
-    title = "Taux de mortalité par catégorie d'usager"
-  )
-```
-
-## idem avec aggregation tué et hospitalisé
-```{r}
-usag %>% 
-  group_by(catu) %>% 
-  mutate(nb_acc_cat = n(),
-         grav = if_else(
-           condition = grav %in% c("Tué", "Blessé hospitalisé"),
-           true = "Blessé grave",
-           false = as.character(grav)
-         )) %>%
-  group_by(catu, grav, nb_acc_cat) %>% 
-  summarise(nb_acc = n()) %>%
-  mutate(perc_grav = round(nb_acc/nb_acc_cat*100,2)) %>% 
-  filter(grav == "Blessé grave") %>% 
-  ggplot(mapping = aes(x = catu, y = perc_grav)) +
-  geom_histogram(stat = "identity") +
-  labs(
-    x = "",
-    y = "Taux d'accidents graves (%)",
-    title = "Taux d'accidents graves par catégorie d'usager"
-  )
-```
-
-
 
 ```{r}
 usag %>% 
@@ -386,45 +339,74 @@ usag %>%
   labs(
     x = "",
     y = "",
-    title = "Distribution de l'âge des usagers l'année de l'accident",
+    title = "Distribution de l'âge des usagers",
     fill = ""
   ) +
-  scale_fill_viridis(discrete = TRUE)
+  scale_fill_viridis(discrete = TRUE) +
+  theme(legend.position = "bottom")
 ```
 
-## Nombre de personnes par voiture + moto etc en moyenne
+## Analyse des accidents graves par catégorie d'usager
 
+```{r}
+p1 <- usag %>% 
+  group_by(catu) %>% 
+  mutate(nb_acc_cat = n()) %>% 
+  group_by(catu, grav, nb_acc_cat) %>% 
+  summarise(nb_acc = n()) %>%
+  mutate(perc_grav = round(nb_acc/nb_acc_cat*100,2)) %>% 
+  filter(grav == "Tué") %>% 
+  ggplot(mapping = aes(x = catu, y = perc_grav)) +
+  geom_histogram(stat = "identity") +
+  labs(
+    x = "",
+    y = "Taux de mortalité (%)",
+    title = "Taux de mortalité par\n catégorie d'usager"
+  )
+```
 
+```{r}
+p2 <- usag %>% 
+  group_by(catu) %>% 
+  mutate(nb_acc_cat = n(),
+         grav = if_else(
+           condition = grav %in% c("Tué", "Blessé hospitalisé"),
+           true = "Blessé grave",
+           false = as.character(grav)
+         )) %>%
+  group_by(catu, grav, nb_acc_cat) %>% 
+  summarise(nb_acc = n()) %>%
+  mutate(perc_grav = round(nb_acc/nb_acc_cat*100,2)) %>% 
+  filter(grav == "Blessé grave") %>% 
+  ggplot(mapping = aes(x = catu, y = perc_grav)) +
+  geom_histogram(stat = "identity") +
+  labs(
+    x = "",
+    y = "Taux d'accidents graves (%)",
+    title = "Taux d'accidents graves\n par catégorie d'usager",
+    subtitle = "L'usager est décédé ou\n hospitalisé"
+  )
+```
+```{r}
+p1 + p2
+```
 
-
-
-
+## Distribution du nombre de personnes par véhicule
 
 # Analyse des sources de danger
 
 ## Analyse des types de voies
 Quels sont les types de voies les plus dangereuses ?
 
-Distribution des accidents selon la voie
-boxplot taux mortalité / boxplot gravité
+## Analyse des intersections
+Quel est le type d'intersection le plus dangereux ?
 
-## Quel est le type d'intersection le plus dangereux ?
+## Analyse de l'état de la voie
 
-## Nombre de tués ou blessée hospitalisés vs nb total d'accident
+## Analyse de l'impact du type de véhicule utilisé
 
-## Quel est l'impact de l'état de la voie sur le nombre d'accident ?
-
-## Quel est l'impact de l'état de la voie sur le taux de mortalité ?
-
-## Distribution des accidents par type de véhicules utilisé 
-
-
-
-
-
-## Quel est l'impact du moment de la journée sur le taux de mortalité ?
-
-Faire aussi les boxplots
+## Analyse de l'impact du moment de la journée 
+Quel est l'impact du moment de la journée sur le taux de mortalité ?
 
 ```{r, out.width="100%"}
 # Nombre d'accidents graves en fonction du moment de la journée
@@ -463,18 +445,16 @@ day_grav %>%
                                          "Indemne" = "lightblue")) +
   theme(
     axis.ticks = element_blank(),
-    axis.text.x = element_blank()
+    axis.text.x = element_blank(),
+    legend.position = "bottom",
+    axis.text.y = element_text(angle = 30)
   )
 ```
 
 
-# est-ce que le temps est un facteur aggravant ?
+## Analyse de l'impact de la météo
 
-## Quels sont les véhicules les plus dangereux ?
-Les plus impliqués dans des accidents ?
-
-
-# Quels sont les plus grosses sources de danger pour les piétons ?
+## Piéton : quels sont les plus grosses sources de danger pour les piétons ?
 
 
 
